tests/sumo/errors/routes/busStop_missing/errors.sumo
Error: The busStop 'dummy' is not known in vehicle '0'..
Error: Invalid stop definition in vehicle '0'..
Quitting (on error).
